[gd_scene load_steps=35 format=2]

[ext_resource path="res://Assets/Beholder/beholder_wink2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Beholder/beholder_idle2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Beholder/beholder_idle1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Beholder/beholder_wink1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Beholder/beholder_wink4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Beholder/beholder_wink6.png" type="Texture" id=6]
[ext_resource path="res://Assets/Beholder/beholder_wink5.png" type="Texture" id=7]
[ext_resource path="res://Assets/Beholder/beholder_wink7.png" type="Texture" id=8]
[ext_resource path="res://Assets/Beholder/beholder_wink3.png" type="Texture" id=9]
[ext_resource path="res://src/Actors/Beholder.gd" type="Script" id=10]
[ext_resource path="res://Assets/Beholder/beholder_bite1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Beholder/beholder_bite3.png" type="Texture" id=12]
[ext_resource path="res://Assets/Beholder/beholder_bite2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Beholder/laser_ball_big_charge3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Beholder/laser_ball_big_charge2.png" type="Texture" id=15]
[ext_resource path="res://Assets/Beholder/laser_ball_big_charge4.png" type="Texture" id=16]
[ext_resource path="res://Assets/Beholder/laser_ball_big_charge5.png" type="Texture" id=17]
[ext_resource path="res://Assets/Beholder/laser_ball_big_charge1.png" type="Texture" id=18]
[ext_resource path="res://Assets/Beholder/beholder_death3.png" type="Texture" id=19]
[ext_resource path="res://Assets/Beholder/beholder_death1.png" type="Texture" id=20]
[ext_resource path="res://Assets/Beholder/beholder_death2.png" type="Texture" id=21]
[ext_resource path="res://Assets/Beholder/beholder_death6.png" type="Texture" id=22]
[ext_resource path="res://Assets/Beholder/beholder_death4.png" type="Texture" id=23]
[ext_resource path="res://Assets/Beholder/beholder_death5.png" type="Texture" id=24]
[ext_resource path="res://Music/Beholder/laser_charge.wav" type="AudioStream" id=25]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48, 48 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 35, 35 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 120, 90 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 12 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 20, 13 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 120, 100 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "close",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 22 ), null ],
"loop": false,
"name": "death",
"speed": 20.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": false,
"name": "bite",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": false,
"name": "wink",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "opening",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ null, ExtResource( 18 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "default",
"speed": 8.0
} ]

[node name="Beholder" type="KinematicBody2D"]
z_index = -1
collision_layer = 8192
collision_mask = 0
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="DestroyBlocks" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DestroyBlocks"]
position = Vector2( 0, -4 )
shape = SubResource( 3 )

[node name="Whip" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Whip"]
shape = SubResource( 4 )

[node name="Player" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 5 )

[node name="BiteMaybe" type="Area2D" parent="."]
position = Vector2( 0, 13 )
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BiteMaybe"]
modulate = Color( 0.145098, 0.0666667, 0.513726, 1 )
shape = SubResource( 6 )

[node name="Bite" type="Area2D" parent="."]
visible = false
modulate = Color( 0.0823529, 0.705882, 0.0784314, 1 )
position = Vector2( 0, 13 )
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bite"]
shape = SubResource( 7 )

[node name="EpicStuff" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EpicStuff"]
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "death"
frame = 13
playing = true

[node name="Charge" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -10 )
frames = SubResource( 9 )
frame = 5
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -10 )
rotating = true
current = true
zoom = Vector2( 0.14, 0.14 )
limit_left = 0
limit_top = 0
limit_right = 672
limit_bottom = 544
smoothing_enabled = true
smoothing_speed = 7.0

[node name="BigLaser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -10.0

[connection signal="body_entered" from="DestroyBlocks" to="." method="_on_DestroyBlocks_body_entered"]
[connection signal="area_entered" from="Whip" to="." method="_on_Whip_area_entered"]
[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]
[connection signal="body_exited" from="Player" to="." method="_on_Player_body_exited"]
[connection signal="body_entered" from="BiteMaybe" to="." method="_on_BiteMaybe_body_entered"]
[connection signal="body_entered" from="Bite" to="." method="_on_Bite_body_entered"]
[connection signal="body_entered" from="EpicStuff" to="." method="_on_EpicStuff_body_entered"]
